changing from rest to firebase